syntax="proto3";
package Carrier;

message DistributeLogRt{
	// imei
	string imei   = 1;

	// time 格式为YYMMDD-HHMMSS
	// 例如170918-091800表示
	// 2017年09月18日09时18分00秒 
	// 勿忘国耻!
	string time   = 2;

	// 1 登录成功 
	// 2 非法用户
	string result = 3;
	

	// 默认参数 (terminal version > 106)
	// key 的可选值 : 0 <- 定位频度 单位 分
	//              : 1 <- 低电告警
	map<string, string> settings = 4;
}
